Small fixes to support screen 240x320

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <div id="DotaLogo" class="d-flex justify-content-center w-100 mx-auto">
                 <img src="http://cdn.dota2.com/apps/dota2/images/blog/play/dota_logo.png" class="mw-100">
             </div>
-            <h1 class="text-center">"A Modern Multiplayer Masterpiece"</h1>
+            <h1 class="text-center">"A Modern Multi<wbr>player Master<wbr>piece"</h1>
             <h3 class="text-center">&ndash;Destructoid</h3>
             <p class="text-center"><a class="btn btn-danger btn-lg" href="#" role="button">Play for Free</a></p>
             <h2 class="text-center"> Join the Battle. Bring your friends.</h2>
@@ -54,7 +54,7 @@
                 <p class="text-dark">Every day, millions of players worldwide enter battle as one of over a hundred Dota heroes. And no matter if it's their 10th hour of play or 1,000th, there's always something new to discover. With regular updates that ensure a constant evolution of gameplay, features, and heroes, Dota 2 has truly taken on a life of its own.</p>
             </div>
             <div class="col-xl-4 d-flex flex-column align-items-start" style="color:white; background-image:url('http://cdn.dota2.com/apps/dota2/images/blog/play/bg_05.jpg'); background-size: cover; background-position: center;">
-                <h1 class=".text-white text-center">One Battlefield. Infinite Possibilities.</h1>
+                <h1 class=".text-white text-center">One Battlefield. Infinite Possibi<wbr>lities.</h1>
                 <p class="text-white-50">When it comes to diversity of heroes, abilities, and powerful items, Dota boasts an endless array—no two games are the same. Any hero can fill multiple roles, and there's an abundance of items to help meet the needs of each game. Dota doesn't provide limitations on how to play, it empowers you to express your own style.</p>
             </div>
             <div class="col-xl-4 d-flex flex-column align-items-end" style="background-image:url('http://cdn.dota2.com/apps/dota2/images/blog/play/bg_06.jpg'); background-size: cover; background-position: center;">
@@ -67,7 +67,7 @@
         <div id="fullInfoContainer" class="container">
             <h1 class="text-center pt-5">Bring your friends and party up.</h1>
             <p class="text-center">Dota is deep, and constantly evolving, but it's never too late to join.<br />Learn the ropes playing co-op vs. bots. Sharpen your skills in the hero demo mode. Jump into the behavior- and skill-based matchmaking system that ensures you'll be matched with the right players each game.</p>
-            <!-- <form>
+            <form>
                     <div class="form-group">
                         <label for="exampleFormControlInput1">Email address</label>
                         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
@@ -76,7 +76,7 @@
                         <label for="exampleFormControlTextarea1">Example textarea</label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-            </form> -->
+            </form>
         </div>
     </div>
     <img src="http://cdn.dota2.com/apps/dota2/images/blog/play/bg_10.jpg" alt="" class="myFooter w-100">
