--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#" class="nav-link">Heropedia</a>
                     </li>
                 </ul>
-                <button class="btn btn-danger my-2 my-sm-0" type="submit">Play for Free</button>
+                <button class="btn btn-danger my-2 my-sm-0">Play for Free</button>
         </div>
     </nav>
     <div id="mainContainer" class="container-fluid p-4">
@@ -67,19 +67,23 @@
         <div id="fullInfoContainer" class="container">
             <h1 class="text-center pt-5">Bring your friends and party up.</h1>
             <p class="text-center">Dota is deep, and constantly evolving, but it's never too late to join.<br />Learn the ropes playing co-op vs. bots. Sharpen your skills in the hero demo mode. Jump into the behavior- and skill-based matchmaking system that ensures you'll be matched with the right players each game.</p>
+            <h2 class="text-center">Have questions? Ask!</h2>
             <form>
                     <div class="form-group">
-                        <label for="exampleFormControlInput1">Email address</label>
-                        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                        <label for="emailAddress">Email address</label>
+                        <input type="email" class="form-control bg-dark text-white" id="emailAddress" placeholder="name@example.com">
                     </div>
                     <div class="form-group">
-                        <label for="exampleFormControlTextarea1">Example textarea</label>
-                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                        <label for="comment">Comment</label>
+                        <textarea class="form-control bg-dark text-white" id="comment" rows="3"></textarea>
+                    </div>
+                    <div class="container d-flex flex-column align-items-center">
+                        <button class="btn btn-danger">Send</button>
                     </div>
             </form>
         </div>
     </div>
-    <img src="http://cdn.dota2.com/apps/dota2/images/blog/play/bg_10.jpg" alt="" class="myFooter w-100">
+    <img src="http://cdn.dota2.com/apps/dota2/images/blog/play/bg_10.jpg" alt="" class="myFooter">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
