--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </form>
         </div>
     </div>
-    <img src="http://cdn.dota2.com/apps/dota2/images/blog/play/bg_10.jpg" alt="" class="myFooter">
+    <img src="http://cdn.dota2.com/apps/dota2/images/blog/play/bg_10.jpg" alt="" class="myFooter w-100">
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
